# gnome-topbar-toggle

./: CLAUDE.md  Cargo.toml  README.md  script.sh
emoji-picker/: Cargo.toml
emoji-picker/src/: lib.rs  scroll.rs
src/: main.rs
