[workspace]
members = [".", "emoji-picker"]
resolver = "2"

[package]
name = "gnome-topbar-toggle"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
glib = "0.18"
tray-icon = "0.19"
notify-rust = "4.10"
cairo-rs = { version = "0.18", features = ["use_glib"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
emoji-picker = { path = "emoji-picker" }
libc = "0.2"